# Emergent_Integration

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
Display_client/: main.cpp
Sensor_server/: main.cpp
Sunlight_server/: main.cpp
Temperature_server/: main.cpp
Weather_client/: main.cpp
config/: client-config.json  server-config.json
include/: humidity_interface_v001.hpp  serialization_helpers.hpp  temperature_interface.hpp  temperature_interface_v001.hpp  temperature_interface_v002.hpp
src/: functions.cpp  main.cpp
tests/: test_main.cpp
